envoy/envoy.yaml
static_resources:
  listeners:
    - name: https_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8400
      listener_filters:
        - name: envoy.filters.listener.tls_inspector
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
      filter_chains:
        - filter_chain_match:
            server_names: ["node-00.intel.r7g.org"]
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_params:
                  tls_minimum_protocol_version: TLSv1_3
                  tls_maximum_protocol_version: TLSv1_3
                alpn_protocols: ["h2", "http/1.1"]
                tls_certificates:
                  - certificate_chain:
                      filename: "/data/cluster/certificates/nodes/node-00.intel.r7g.org/node-00.intel.r7g.org.crt"
                    private_key:
                      filename: "/data/cluster/certificates/nodes/node-00.intel.r7g.org/node-00.intel.r7g.org.key"
                validation_context:
                  trusted_ca:
                    filename: "/data/cluster/certificates/CA/ca.crt"
              require_client_certificate: true
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_https
                use_remote_address: true
                request_timeout: 5s
                stream_idle_timeout: 30s
                common_http_protocol_options:
                  idle_timeout: 60s
                route_config:
                  name: secure_route
                  response_headers_to_add:
                    - header:
                        key: "X-Upstream-Node"
                        value: "%UPSTREAM_HOST%"
                  virtual_hosts:
                    - name: node_backends
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: secure_nodes
                            timeout: 5s
                            idle_timeout: 15s
                            auto_host_rewrite: true
                            retry_policy:
                              retry_on: connect-failure,reset,5xx
                              num_retries: 3
                              per_try_timeout: 1s
                              host_selection_retry_max_attempts: 3
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                      log_format:
                        json_format:
                          timestamp: "%START_TIME%"
                          method: "%REQ(:METHOD)%"
                          path: "%REQ(:PATH)%"
                          authority: "%REQ(:AUTHORITY)%"
                          client_ip: "%DOWNSTREAM_REMOTE_ADDRESS%"
                          protocol: "%PROTOCOL%"
                          request_id: "%REQ(X-REQUEST-ID)%"
                          response_code: "%RESPONSE_CODE%"
                          response_flags: "%RESPONSE_FLAGS%"
                          bytes_received: "%BYTES_RECEIVED%"
                          bytes_sent: "%BYTES_SENT%"
                          duration_ms: "%DURATION%"
                          upstream_service_time: "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%"
                          upstream_cluster: "%UPSTREAM_CLUSTER%"
                          upstream_host: "%UPSTREAM_HOST%"
                          tls_version: "%DOWNSTREAM_TLS_VERSION%"
                          tls_cipher: "%DOWNSTREAM_TLS_CIPHER%"
                          client_cert_subject: "%DOWNSTREAM_PEER_SUBJECT%"
                          client_cert_issuer: "%DOWNSTREAM_PEER_ISSUER%"
                          sni: "%REQUESTED_SERVER_NAME%"
  clusters:
    - name: secure_nodes
      connect_timeout: 1s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: RANDOM
      common_lb_config:
        healthy_panic_threshold:
          value: 0
      circuit_breakers:
        thresholds:
          - priority: DEFAULT
            max_connections: 1024
            max_pending_requests: 1024
            max_requests: 1024
            max_retries: 3
      close_connections_on_host_health_failure: true
      load_assignment:
        cluster_name: secure_nodes
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: node-10.intel.r7g.org
                      port_value: 9041
                  health_check_config:
                    hostname: node-10.intel.r7g.org
                metadata:
                  filter_metadata:
                    envoy.lb:
                      host_header: "node-10.intel.r7g.org"
                    envoy.transport_socket_match:
                      sni_label: "node-10"
              - endpoint:
                  address:
                    socket_address:
                      address: node-11.intel.r7g.org
                      port_value: 9041
                  health_check_config:
                    hostname: node-11.intel.r7g.org
                metadata:
                  filter_metadata:
                    envoy.lb:
                      host_header: "node-11.intel.r7g.org"
                    envoy.transport_socket_match:
                      sni_label: "node-11"
              - endpoint:
                  address:
                    socket_address:
                      address: node-12.intel.r7g.org
                      port_value: 9041
                  health_check_config:
                    hostname: node-12.intel.r7g.org
                metadata:
                  filter_metadata:
                    envoy.lb:
                      host_header: "node-12.intel.r7g.org"
                    envoy.transport_socket_match:
                      sni_label: "node-12"
      health_checks:
        - timeout: 2s
          interval: 15s
          unhealthy_threshold: 1
          healthy_threshold: 2
          http_health_check:
            path: "/health"
            codec_client_type: HTTP1
            expected_statuses:
              - start: 200
                end: 201
          event_logger:
            - name: envoy.health_check.event_logger.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.health_check.event_sinks.file.v3.HealthCheckEventFileSink
                event_log_path: /dev/stdout
      transport_socket_matches:
        - name: node-10
          match:
            sni_label: "node-10"
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
              sni: node-10.intel.r7g.org
              common_tls_context:
                tls_params:
                  tls_minimum_protocol_version: TLSv1_3
                  tls_maximum_protocol_version: TLSv1_3
                tls_certificates:
                  - certificate_chain:
                      filename: "/data/cluster/certificates/users/admin/admin.crt"
                    private_key:
                      filename: "/data/cluster/certificates/users/admin/admin.key"
                validation_context:
                  trusted_ca:
                    filename: "/data/cluster/certificates/CA/ca.crt"
        - name: node-11
          match:
            sni_label: "node-11"
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
              sni: node-11.intel.r7g.org
              common_tls_context:
                tls_params:
                  tls_minimum_protocol_version: TLSv1_3
                  tls_maximum_protocol_version: TLSv1_3
                tls_certificates:
                  - certificate_chain:
                      filename: "/data/cluster/certificates/users/admin/admin.crt"
                    private_key:
                      filename: "/data/cluster/certificates/users/admin/admin.key"
                validation_context:
                  trusted_ca:
                    filename: "/data/cluster/certificates/CA/ca.crt"
        - name: node-12
          match:
            sni_label: "node-12"
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
              sni: node-12.intel.r7g.org
              common_tls_context:
                tls_params:
                  tls_minimum_protocol_version: TLSv1_3
                  tls_maximum_protocol_version: TLSv1_3
                tls_certificates:
                  - certificate_chain:
                      filename: "/data/cluster/certificates/users/admin/admin.crt"
                    private_key:
                      filename: "/data/cluster/certificates/users/admin/admin.key"
                validation_context:
                  trusted_ca:
                    filename: "/data/cluster/certificates/CA/ca.crt"
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9000
  access_log:
    - name: envoy.access_loggers.stdout
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
        log_format:
          json_format:
            start_time: "%START_TIME%"
            response_code: "%RESPONSE_CODE%"
            method: "%REQ(:METHOD)%"
overload_manager:
  refresh_interval: 0.25s
  resource_monitors:
    - name: envoy.resource_monitors.global_downstream_max_connections
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.resource_monitors.downstream_connections.v3.DownstreamConnectionsConfig
        max_active_downstream_connections: 100000
